syntax = "proto3";
package types;

message ReceiptWrapper {
    bytes receiptVersion = 1;
    bytes receipt = 2;
}
